Closed
Bug 22043
Opened 26 years ago
Closed 26 years ago
[Dogfood] Can't forward imap mail: get "mailbox does not exist" error
Categories
(MailNews Core :: Networking, defect, P3)
Tracking
(Not tracked)
VERIFIED
FIXED
M13
People
(Reporter: norrisboyd, Assigned: jefft)
Details
(Whiteboard: [PDT-])
Attachments
(1 file)
|
673 bytes,
patch
|
Details | Diff | Splinter Review |
Whenever I forward imap mail, I get an error dialog that pops up and says "The
current command did not succeed. The mail server responded:mailbox does not exist."
The mail is then sent without the body of the forward.
Updated•26 years ago
|
Assignee: mscott → jefft
Comment 1•26 years ago
|
||
jefft, can you help me take a look at this?
Thanks!
Sure... norris, what's your setting of the Sent folder for the identity you were
using to forward the message. I suspect that you might not have a correct
mailbox set.
Putting on PDT- radar. jefft, please get with norris...and if still a
significant problem.
| Reporter | ||
Comment 4•26 years ago
|
||
Okay, after talking with jefft and doing a little more experimentation I've
narrowed down the problem.
What doesn't work is forwarding a message stored in an IMAP folder other than
"INBOX". I have filters set up that move all messages sent to me into a special
folder. So if I try to forward messages from that folder, I get this error. This
happens regardless of the identity that is selected.
This is interesting. I can reproduce the problem. Correct me if my steps are
wrong, norris. I am also cc'ing bienvenu. He might have an idea regarding
message filters.
Forwading messages seems fine. The message get sent and a copy of forwaded
message also placed in the Sent folder. But each time I did the get new message.
I get "mailbox does not exist" error. I bet the filters not get migrated
correctly.
Steps to reproduce the problem:
o use imap account
o make sure that you have a filter for your imap account (I manually edit my
rules.dat file. I might have the folder set incorrectly for the destination
filter folder.)
o get new message
o a dialog pop up saying "mailbox does not exist"
David, what's the format of actionValue should be for an imap folder?
Comment 7•26 years ago
|
||
actionValue="//imap:bonsai"
, same as in 4.5. Migration doesn't have to do
anything to filters files.
Do we need to count for account manager stuff? For example, adding
username@hostname?
| Reporter | ||
Comment 9•26 years ago
|
||
Actually, I think it should be independent of mail filters. I'm just not sure of
how else to get a message in a folder other than INBOX (I guess use 4.7). Once
the message is in the non-INBOX folder, try to forward it. When you send the
forwarded mail, you should then get the error.
| Assignee | ||
Comment 10•26 years ago
|
||
After visiting norris' cube, we found out that when forward as attachment we
failed on downloading messages with folder name containing spaces. For example,
imap_message:://qatest21@nsmail-2/what else could be#18993
| Assignee | ||
Comment 11•26 years ago
|
||
Couple problems here: 1) the space in the folder name of the message uri gets
stripped out when we talk to the server 2) even though downloading the message
failed we still send the message.
252[476a5e0]: dredd:NA:CreateNewLineFromSocket: * OK dredd.mcom.com IMAP4
service (Netscape Messaging Server 4.1 (built Aug 9 1999))
252[476a5e0]: dredd:NA:SendData: 1 authenticate plain
252[476a5e0]: dredd:NA:CreateNewLineFromSocket: +
252[476a5e0]: dredd:NA:SendData: AHFhdGVzdDIxAE5lIXNjLXBl
252[476a5e0]: dredd:NA:CreateNewLineFromSocket: 1 OK User logged in (no
protection)
252[476a5e0]: dredd:A:SendData: 2 XSERVERINFO MANAGEACCOUNTURL MANAGELISTSURL
MANAGEFILTERSURL
252[476a5e0]: dredd:A:CreateNewLineFromSocket: * XSERVERINFO MANAGEACCOUNTURL
{62}
252[476a5e0]: dredd:A:CreateNewLineFromSocket:
http://qatest21@dredd.mcom.com:4444/bin/user/admin/bin/enduser MANAGELISTSURL
NIL MANAGEFILTERSURL NIL
252[476a5e0]: dredd:A:CreateNewLineFromSocket: 2 OK Completed
252[476a5e0]: dredd:A:SendData: 3 select "TestFolder"
252[476a5e0]: dredd:A:CreateNewLineFromSocket: 3 NO Mailbox does not exist
256[376b920]: dredd:S-INBOX:SendData: 28 append "Sent" (\Seen) {839+}
256[376b920]: dredd:S-INBOX:SendData: Message-ID:
<385ADB55.8010608@netscape.com>
Date: Fri, 17 Dec 1999 16:54:45 -0800
From: QA Test21 <qatest21@netscape.com>
User-Agent: Mozilla 5.0 [en-US] (W
256[376b920]: dredd:S-INBOX:SendData:
256[376b920]: dredd:S-INBOX:CreateNewLineFromSocket: 28 OK [APPENDUID 910497890
94] Completed
| Assignee | ||
Comment 12•26 years ago
|
||
The foldername spaces were stripped out when downloading message for send
operation. The right way to do it would be to trim the leading and trailing
spaces intead of all spaces.
| Assignee | ||
Comment 13•26 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 26 years ago
Resolution: --- → FIXED
| Assignee | ||
Comment 14•26 years ago
|
||
Fix checked in. Use nsString::Trim() instead of
nsString::StripWhiteSpaces() to trim leading and trailing spaces. nsMsgSend.cpp
modified.
Comment 15•26 years ago
|
||
Using win32 build 20000104 I verified the problem by downloading 12/17 build,
then I verified the fix by running the same test on the 1/4/2000 build. If
reporter still has a problem please reopen. Verified.
Updated•21 years ago
|
Product: MailNews → Core
Updated•18 years ago
|
Product: Core → MailNews Core
You need to log in
before you can comment on or make changes to this bug.
Description
•