fixed bug 22043 -- [Dogfood] Can't forward imap mail: get 'mailbox does not exist' error; r=bienvenu,rhp a=chofmann